<resources>
    <string name="app_name">Habitus - Venditor</string>
    <string name="registration">REGISTRATION</string>
    <string name="select_shop">Select your shop</string>
    <string name="medical_shop">Medical shop</string>
    <string name="grocery_store">Grocery store</string>
    <string name="select_what_you_own">SELECT WHAT YOU OWN</string>
    <string name="locationpin">LocationPin</string>
    <string name="your_phone">Your phone number</string>
    <string name="google_places_key">AIzaSyA-jTNigOJ8f3zQ6qketJ1QRVLTy7rkduo</string>
    <string name="reg_once">Registration can be done only once, so please enter the correct credentials</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="welcome_guest">GUEST</string>
    <string name="check_requests_for_your_shop">Check requests for your shop</string>
    <string name="medical_shop_image">Medical Shop Image</string>
    <string name="pending_requests">Pending requests</string>
    <string name="approved_requests">Approved requests</string>
    <string name="item_quantity">Item quantity</string>
    <string name="item_name">Item name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="prescription">PRESCRIPTION</string>
    <string name="get_prescription">GET PRESCRIPTION</string>
    <string name="req">Please not that request once approved cannot be reverted.</string>
    <string name="approve_request">Approve request</string>
    <string name="request_approval">Request approval</string>
    <string name="check">CHECK</string>
    <string name="select_a_slot">Select a slot</string>
    <string name="click_on_the_spinner">Click on the spinner to check number of people in the slot</string>
</resources>
