<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fontFamily="@font/product_sans_bold"
            android:padding="20dp"
            android:text="@string/request_approval"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerText"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/select_a_slot"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="20sp"
                    app:ms_arrow_tint="@color/colorAccent"
                    app:ms_popup_padding_bottom="8dp"
                    app:ms_popup_padding_left="8dp"
                    app:ms_popup_padding_right="8dp"
                    app:ms_text_color="@color/textBlack" />

                <ProgressBar
                    android:id="@+id/checkProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:progressTint="@color/colorAccent"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/checkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Sample"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/req"
                android:textAlignment="center"
                android:textStyle="italic" />

            <Button
                android:id="@+id/approveRequestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:padding="10dp"
                android:text="@string/approve_request"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>