<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:id="@+id/icon_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_background"
                android:padding="30dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/stay_home" />

            </FrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_circle"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/top_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/textBlack"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shimmer_view_container"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/welcome_guest"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chooseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/check_requests_for_your_shop"
                android:textColor="@color/textBlack"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/chooseText"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/shopButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/medical_shop_image"
                    android:padding="10dp"
                    android:src="@drawable/medicine" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/images"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/shop_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/medical_shop"
                    android:textAlignment="center"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--        <Button-->
            <!--            android:id="@+id/bt"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_below="@+id/texts"-->
            <!--            android:layout_centerHorizontal="true"-->
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:background="@drawable/button"-->
            <!--            android:gravity="center"-->
            <!--            android:padding="10dp"-->
            <!--            android:text="@string/bluetooth"-->
            <!--            android:textStyle="bold" />-->

            <!--        <TextView-->
            <!--            android:id="@+id/btText"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_below="@+id/bt"-->
            <!--            android:gravity="center"-->
            <!--            android:padding="10dp"-->
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:textColor="@color/textBlack"-->
            <!--            android:textSize="20sp" />-->

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>